# react-native-windows-file-save

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-inv-file-saver.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/invfilesaver/: InvFileSaverModule.kt  InvFileSaverPackage.kt
cpp/: react-native-inv-file-saver.cpp  react-native-inv-file-saver.h
example/: app.json  package.json
example/android/: settings.gradle
example/ios/: File.swift  Podfile
example/src/: App.tsx
ios/: InvFileSaver.h  InvFileSaver.mm
src/: index.tsx
